--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 certifi==2018.1.18
 chardet==3.0.4
-Django==1.11.9
+django>=1.11.15
 django-tastypie==0.14.0
 googlemaps==2.5.1
 idna==2.6
 python-dateutil==2.6.1
 python-mimeparse==1.6.0
 pytz==2017.3
-requests==2.18.4
+requests>=2.20.0
 six==1.11.0
 urllib3==1.22
